Minor alignment solved :2 container added

--- a/style.css
+++ b/style.css
@@ -27,28 +27,42 @@
     margin-top:8%;
     text-transform:capitalize;
 }
-
+#contaner{
+    width: 100%;
+    box-sizing: border-box;
+    border: 1px solid black;
+    display: flex;
+    position: relative;
+}
 #lb{
     float:left;
-    margin-left:2%;
-    margin-bottom:2%;
+    border-radius: 5%;
+    
     cursor: pointer;
+    width: 45%;
+
 }
 
 #rb{
     float:right;
+    margin-left:2% ;
+    width: 45%;
     text-align:center;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-right:2%;
-    margin-bottom:4.5%;
+   border-radius: 5%;
     background-color: rgb(201, 215, 10);
+}
+#con2{
+    box-sizing: border-box;
+    width: 90%;
 }
 #tb{
     float:left;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size:20px;
     text-align:left;
-    margin-left:2%;
+    
+    width:40%;
 }
 
 #img{
